web/dashboard/backend/src/main/sass/components/_sonhos-bundles.scss
.sonhos-bundles-wrapper {
    display: grid;
    gap: 1em;
    grid-template-columns: repeat(3, minmax(0, 1fr));

    @media (max-width: 800px) {
        grid-template-columns: 1fr;
    }

    .sonhos-bundle {
        background-color: #f3f3f4;
        display: flex;
        flex-direction: column;
        padding: 1em;
        border-radius: 7px;
        position: relative;
        border: 1px solid #e1e1e4;

        .sonhos-wrapper {
            -webkit-mask-image: linear-gradient(to bottom, black 50%, rgba(0, 0, 0, 0) 100%);
            mask-image: linear-gradient(to bottom, black 50%, rgba(0, 0, 0, 0) 100%);
            height: 200px;
            width: 100%;
            display: flex;
            align-items: start;
            justify-content: center;
            animation: 2.5s linear infinite alternate glow-animation;
            padding-top: 10px;
            overflow: hidden; // Required to avoid the buttons being unclickable due to the image size

            img {
                width: 100%;
                height: auto;
                margin-top: auto;
                margin-bottom: auto;
            }
        }

        .bundle-title {
            font-size: 2em;
            color: #29a6fe;
            font-weight: bold;
            text-align: center;
        }

        button {
            margin-top: auto;
        }
    }
}

@keyframes glow-animation {
    0% { filter: drop-shadow(0px 0px 2px #fde6338f); }
    100% { filter: drop-shadow(0px 0px 10px #fde6338f); }
}

